--- a/index.html
+++ b/index.html
@@ -59,6 +59,27 @@
     </div>
   </section>
 
+  <!-- Game Details Modal -->
+  <div id="gameModal" class="modal">
+    <div class="modal-content">
+      <span class="close-modal">&times;</span>
+      <div class="modal-header">
+        <h2 id="modalGameName"></h2>
+      </div>
+      <div class="modal-body">
+        <div class="modal-image-container">
+          <img id="modalGameImage" src="" alt="Game Image">
+        </div>
+        <div class="modal-description">
+          <p id="modalGameDescription"></p>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn--play">Play Now</button>
+      </div>
+    </div>
+  </div>
+
 </main>
 
 <footer class="footer">
