--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     <img src="./img/vavada.webp" alt="Vavada logo" />
   </div>
   <nav class="header__nav">
-    <a href="#">Home</a>
-    <a href="#">Review</a>
-    <a href="#">Bonus</a>
-    <a href="#">Spins</a>
+    <a href="index.html">Home</a>
+    <a href="review.html">Review</a>
+    <a href="bonus.html">Bonus</a>
   </nav>
   <div class="header__auth">
     <a class="btn btn--login" href="#">Login</a>
@@ -24,13 +23,13 @@
 </header>
 
 <main class="content">
-  <h1 class="content__title">Vavada Casino</h1>
+  <h1 class="content__title">Lavada Casino</h1>
   <p class="content__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
 
   <section class="banner">
     <div class="banner__overlay">
       <h2 class="banner__text">Free bonus</h2>
-      <a class="btn btn-bonus" href="#">Get bonus</a>
+      <a class="btn btn-bonus" href="bonus.html">Get bonus</a>
     </div>
   </section>
 
